complétude du package model pour correspondance avec fichier Json, création des interfaces dans package repository, création d'un convertiseur dans package util

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=safetyNetAlerts
 
 logging.level.org.springframework=error
+logging.level.com.openclassrooms=info
 
+serveur.port=9000
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 # Connexion MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/safetynet?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
@@ -10,6 +13,6 @@ spring.datasource.password=rootroot
 
 # Hibernate / JPA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update	
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
