Création de 6 endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,31 @@
+# nom de l'application 
 spring.application.name=safetyNetAlerts
 
+# configuration des logs
 logging.level.org.springframework=error
 logging.level.com.openclassrooms=info
-
-serveur.port=9000
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+logging.level.org.hibernate.SQL=debug
 
-# Connexion MySQL
+# configuration du serveur
+server.port=8080
+
+# configuration de la BDD MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/safetynet?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# externalisation password dans variable d'environnement pour sécurité
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect		vérifier si besoin ?
 
 # Hibernate / JPA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update	
-spring.jpa.show-sql=true
+
+# Affiche la requête SQL brute
+spring.jpa.show-sql=true	
+
+# Formate la requête SQL (lisible dans la console)
+spring.jpa.properties.hibernate.format_sql=true	
+
+# Affiche les requêtes SQL dans les logs avec leurs paramètres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
