--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # nom de l'application 
 spring.application.name=safetyNetAlerts
 
+# Profil actif par défaut
+spring.profiles.active=dev
+
 # configuration des logs
 logging.level.org.springframework=error
 logging.level.com.openclassrooms=info
