--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 # nom de l'application 
 spring.application.name=safetyNetAlerts
 
+# chemin vers le fichier de données principal
+safetynet.data-file=C:/Users/cvign/eclipse-workspace/safetyNetAlerts/data/data.json
+
 # configuration des logs
 logging.level.org.springframework=error
 logging.level.com.openclassrooms=info
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+# Nom et emplacement du fichier de log
+logging.file.name=logs/app.log
 
 # configuration du serveur
 server.port=8080
